[tool.poetry]
name = "dkp"
version = "1.0.0"
description = "DocKer compose Packer"
authors = ["Aleksandr Baryshnikov <owner@reddec.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.scripts]
dkp = "dkp:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
